--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,9 @@
 <h1>Showing</h1>
 
 <% if @user.profile_pic.url %>
-  <%= image_tag @user.profile_pic.url %>
+  <%= image_tag @user.profile_pic.detail.url %>
+
+
 <% else %>
   <img src="http://fillmurray.com/200/300">
 <% end %>
