--- a/app/views/events/run.html.erb
+++ b/app/views/events/run.html.erb
@@ -3,7 +3,7 @@
 <h3 class="grey-text" id="event_date_run"><%= @event.date %></h3>
   <div class="row">
     <div class="col-md-6 offset-md-3">
-      <input type="" name="" id="search" placeholder="search"> 
+      <input id="search" placeholder="Search" class="form-control"> 
     </div>    
   </div>
   <div class="row">
@@ -17,7 +17,11 @@
 <% @event.groups.each do |group| %>
   <div class="row">
     <div class="col-md-3 offset-md-3">
+    <ul>
+      <li><%= group.user.full_name %></li>
+    </ul>
 
+<!-- 
       <div class="dropdown">
       <div class="btn btn-secondary dropdown-toggle" href="http://example.com" id="dropdownMenuLink" data-target="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="users">
         <%= group.user.full_name %>
@@ -25,7 +29,7 @@
 
       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
       <div class="card">
-        <%= image_tag group.user.profile_pic.detail.url, {class: "card-img-top"} %>
+        <%= image_tag group.user.profile_pic.detail.url, {} %>
         
         <div class="card-block">
           <h4 class="card-title"><%= group.user.full_name %></h4>
@@ -34,7 +38,7 @@
       </div>
       
       </div>
-    </div>   
+    </div>    -->
     
     </div>
 
