--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -24,9 +24,10 @@
   <div class="col-md-6 offset-md-3">
     <h3><%= @event.name %></h3>
     <% if current_user.is_admin %>
-    <p>Used:</p>
+    <p>Allocated: <%= @event.allocation %></p>
+    <p>Admitted: <%= @event.allocation - @event.remaining %></p>
     <p>Remaining: <%= @event.remaining %></p>
-    <p>Allocated:</p>
+    
     <% end %>
   </div>
 </div>
