--- a/app/views/events/run.html.erb
+++ b/app/views/events/run.html.erb
@@ -1,4 +1,10 @@
 <div class="container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <p id="notice"><%= notice %></p>
+      <%= link_to 'Back', event_path %>
+    </div>
+  </div>
 <h2><%= @event.name %></h2>
 <h3 class="grey-text" id="event_date_run"><%= @event.date %></h3>
   <div class="row">
