--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -22,8 +22,9 @@
 
 <div class="row">
   <div class="col-md-6 offset-md-3">
-    <h3><%= @event.name %></h3>
+    <h3 id="event-title"><%= @event.name %></h3>
     <% if current_user.is_admin %>
+
 
     <p>Allocated: <%= @event.allocation %></p>
     <p>Admitted: <%= @event.allocation - @event.remaining %></p>
@@ -88,3 +89,5 @@
 </div>
 
 </div>
+
+
