--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,7 @@
 nav.navbar {
     background-color: transparent;
     background: transparent;
+    border-radius:0;
     border-color: transparent;
     
 
